@@ -1,5 +1,9 @@
 2007-05-05  Eitan Isaacson  <eitan@ascender.com>
 
+	* plugins/interface_view.py: Implemented table section.
+
+2007-05-05  Eitan Isaacson  <eitan@ascender.com>
+
 	* plugins/interface_view.py: Implemented sections for accessible, 
 	action, application, component, document, hypertext, image,
 	selection and streamable content.
